# fife

./: .gitmodules  CMakeLists.txt  README.md  justfile
.github/workflows/: build.yml
homebrew/: fife.rb
src/: main.cpp
